ShakeCharity/ShakeSharityApp/force-app/main/default/objects/npsp__Level__c/fields/npsp__Level_Field__c.field-meta.xml
<CustomField>
    <fullName>npsp__Level_Field__c</fullName>
    <description>Indicates which field to use on the target object to store the current Level.</description>
    <inlineHelpText>The field (developer name) on the Target object to store the lookup to the current Level.  Note that this field implicitly defines the “Ladder” that this Level is part of.</inlineHelpText>
    <label>Level Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>