ShakeCharity/ShakeSharityApp/force-app/main/default/objects/npsp__Level__c/fields/npsp__Maximum_Amount__c.field-meta.xml
<CustomField>
    <fullName>npsp__Maximum_Amount__c</fullName>
    <description>The amount the value must be below for NPSP to assign this Level. If this field is empty, NPSP will assign this Level for any amount greater than or equal to this Level&apos;s Minimum Amount.</description>
    <inlineHelpText>The maximum amount the value must be below to be assigned this Level.  If empty, then any amount greater than or equal to this Level&apos;s Minimum Amount will assign this Level.</inlineHelpText>
    <label>Maximum Amount (&lt;)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>