ShakeCharity/ShakeSharityApp/force-app/main/default/objects/npsp__Level__c/fields/npsp__Previous_Level_Field__c.field-meta.xml
<CustomField>
    <fullName>npsp__Previous_Level_Field__c</fullName>
    <description>Indicates which field to use on the target object to store the previous Level.</description>
    <inlineHelpText>The field (developer name) on the Target object to store the lookup to the previous Level the object had.  Optional.</inlineHelpText>
    <label>Previous Level Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>